# mh-service-kit

./: CHANGELOG.md  README.md  pyproject.toml
docs/: dev-guide.agent.md  dev-guide.md
src/mh_service_kit/: __init__.py  app.py  context.py  llm.py  locale.py  logging_setup.py  m2m_auth.py  models.py  playground.py
src/mh_service_kit/sse/: __init__.py  agent_driver.py  agent_runner.py  line.py  remote_agent.py  serialization.py  tool_executor.py
