[project]
name = "mh-service-kit"
version = "0.1.0b4"
description = "SDK for building standalone agent & tool services in the minimal-harness ecosystem"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "minimal-harness>=0.6.2a16",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.12"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
minimal-harness = { workspace = true }
